# conditional-dependency-detection

./: .gitignore
BCIA/BuiScout/: .gitignore  config.json  scout.py
BCIA/tree-sitter-parser/: .gitignore  .gitmodules  README.md
Buiscout/: Dockerfile
Buiscout/command_options/: run.py
Buiscout/test/: config.json
options_extract/: arrange_option.py  ceph_dep_opt.csv  ceph_options.json  clementine_dep_opt.csv  clementine_options.json  deepdetect_dep_opt.csv  deepdetect_options.json  etlegacy_def_point.csv  etlegacy_dep_opt.csv  etlegacy_options.json  extract_options.py  freecad_dep_opt.csv  freecad_options.json  lnav_dep_opt.csv  lnav_options.json  natron_def_points.csv  natron_dep_opt.csv  natron_options.json  scylladb_dep_opt.csv  tomahawk_dep_opt.csv  tomahawk_options.json  wireshark_dep_opt.csv  wireshark_options.json
test_output/: Average.csv  ceph.csv  ceph.json  clementine.csv  clementine.json  create_table.py  deepdetect.csv  deepdetect.json  etlegacy.csv  etlegacy.json  etlegacy_output.csv  extract_dependency.py  freecad.csv  freecad.json  lnav.csv  lnav.json  natron.csv  natron.json  output.csv  scout_optimize.py  scylladb.csv  scylladb.json  test.csv  tomahawk.csv  tomahawk.json  wireshark.csv  wireshark.json
test_output/ccscanner/: scanner.py
test_output/default_options/: CMakeLists.txt  generate_CMakeLists.py
test_output/empirical_study_tools/: language_related_dep.py  option_count_output.csv  option_times.py
test_output/options_extract/: arrange_option.py  arrange_option_old.py  ceph_dep_opt.csv  ceph_dep_opt2.csv  ceph_option2.json  ceph_options.json  clementine_dep_opt.csv  clementine_option.json  (+23 more)
(+37 files in other folders)
