if(X11_FOUND)
    set(HAVE_X11 ON)
endif()
if(NOT (TAGLIB_FOUND AND USE_SYSTEM_TAGLIB) AND )
    set(TAGLIB_VERSION 1.11.1)
endif()
set(TAGLIB_VERSION 1.11.1)
if(TAGLIB_VERSION VERSION_GREATER 1.11.1)
    option(USE_SYSTEM_TAGLIB "Use system taglib" ON)
endif()
if(NOT (TAGLIB_FOUND AND USE_SYSTEM_TAGLIB) AND  AND BUILD_TESTS AND NOT BUILD_SHARED_LIBS AND NOT CppUnit_FOUND)
    set(BUILD_TESTS OFF)
endif()
option(USE_SYSTEM_PROJECTM "Don't set this option unless your system projectM library has been compiled with the Clementine patches in 3rdparty" OFF)
if(HAVE_VISUALISATIONS AND NOT (USE_SYSTEM_PROJECTM) AND USE_SYSTEM_PROJECTM)
    set(USE_NATIVE_GLEW OFF)
endif()
if(HAVE_VISUALISATIONS AND NOT (USE_SYSTEM_PROJECTM) AND USE_SYSTEM_PROJECTM)
    set(USE_FTGL OFF)
endif()
option(USE_SYSTEM_QTSINGLEAPPLICATION "Don't set this option unless your system QtSingleApplication library has been compiled with the Clementine patches in 3rdparty" OFF)
option(USE_SYSTEM_QXT "Don't set this option unless your system Qxt library has been compiled with the Clementine patches in 3rdparty" OFF)
if(NOT (QJSON_INCLUDE_DIR AND QJSON_LIBRARIES) AND QJSON_INCLUDE_DIR AND QJSON_LIBRARIES AND UNIX AND NOT APPLE)
    set(QJSON_LIBRARIES "${QJSON_LIBRARIES}${QJSON_LDFLAGS}" CACHE INTERNAL "")
endif()
if(NOT (QJSON_INCLUDE_DIR AND QJSON_LIBRARIES) AND QJSON_INCLUDE_DIR AND QJSON_LIBRARIES AND UNIX AND NOT APPLE)
    set(QJSON_LIBRARIES "${QJSON_LIBRARIES}${QJSON_LDFLAGS}" CACHE INTERNAL "")
endif()